Refactor serialization factories, impl external sorting for productID storage
- Now there is one class responsible for defining (de)serialization,
  'SerializableFactory'
  and also provides a utility method for getting a spliterator of
  elements by repeatedly de-serializing an input stream

- Implement ExternalSorter class, which is generic and works with
  anything that has a serializable factory. Can work on both
  DataInput/Output streams as well as spliterators

- Remove 'interleave' method, it wasn't really correct for use
  in multi-way merge. The ExternalSorter class now contains a more
  appropriate spliterator for this purpose.

- Refactor deleting a directory to its own method