@@ -1,7 +1,9 @@
 package webdata;
 
+import webdata.parsing.LinesMemoryParser;
 import webdata.parsing.ParallelReviewParser;
 import webdata.parsing.Review;
+import webdata.parsing.SequentialReviewParser;
 import webdata.spimi.SPIMIIndexer;
 import webdata.storage.CompactReview;
 import webdata.storage.ProductIdToDocIdMapper;
@@ -12,8 +14,6 @@ import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.Comparator;
 
 public class SlowIndexWriter {
 
@@ -31,23 +31,29 @@ public class SlowIndexWriter {
 
 			var indexer = new SPIMIIndexer(Path.of(dir));
 			try (var storage = ReviewStorage.inDirectory(dir);
-				 var mapper = new ProductIdToDocIdMapper(dir, storage)) {
+				 var mapper = new ProductIdToDocIdMapper(dir)) {
 
-				int bufSize = 1 << 16;
-				int numBufs = 4;
-				var parser = new ParallelReviewParser(bufSize, numBufs, inputFileCharset);
+//				var parser = new ParallelReviewParser(1024 * 1024 * 100, inputFileCharset);
+//                var parser = new SequentialReviewParser(1024 * 1024 * 100, inputFileCharset);
+//				var stream = parser.parse(inputFile)
+                var parser = new LinesMemoryParser().parse(Path.of(inputFile), inputFileCharset);
 
 				final int[] docId = {1};
 
-				var stream = parser.parse(inputFile)
+				var stream = parser
 						.sequential()
 						.peek(review -> {
 							review.assignDocId(docId[0]);
 							docId[0] += 1;
 							storage.add(new CompactReview(review));
+							mapper.observeProduct(review.getProductId(), review.getDocId());
+							if (docId[0] % 100000 == 0) {
+								Utils.log("== Processed a total of %,d reviews ==", docId[0]);
+							}
 						})
 						.flatMap(Review::uniqueTokens);
 				indexer.processTokens(stream);
+				mapper.externalSort();
 			}
 		} catch (IOException ex) {
 			System.err.println("Got IO exception during slowWrite: " + ex);
@@ -59,19 +65,7 @@ public class SlowIndexWriter {
 	*/
 	public void removeIndex(String dir) {
 	    try {
-	        var dirPath = Paths.get(dir);
-	        if (!Files.exists(dirPath)) {
-	        	return;
-			}
-			var deletedAllFiles = Files.walk(dirPath)
-					.sorted(Comparator.reverseOrder())
-					.map(Path::toFile)
-					.reduce(true, (deleted, file) -> deleted && file.delete(), Boolean::logicalAnd);
-
-			if (!deletedAllFiles) {
-				System.err.println("Couldn't delete all files within directory\n");
-			}
-			Files.deleteIfExists(Paths.get(dir));
+	    	Utils.deleteDirectory(Path.of(dir));
 		} catch (IOException ex) {
 			System.err.format("Got exception while trying to delete index at %s: %s\n", dir, ex.toString());
 		}
